--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <article id="Calculadora">
             <span id="Display"></span>
             <div class="fila">
-                <button id="div">%</button>
+                <button id="div">/</button>
                 <button id="borrar">🡠</button>
                 <button class="doble" id="reset" style="background-color: rgb(204, 0, 0);">CE</button>
             </div>
